drone/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner
spec:
  replicas: 1
  selector:
    matchLabels:
      name: runner
  template:
    metadata:
      labels:
        name: runner
    spec:
      containers:
        - name: runner
          image: drone/drone-runner-kube
          ports:
            - name: rpc
              containerPort: 3000
