drone/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: drone
spec:
  serviceName: drone
  replicas: 1
  selector:
    matchLabels:
      name: drone
  template:
    metadata:
      labels:
        name: drone
    spec:
      containers:
        - name: drone
          image: drone/drone:2
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: drone-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: drone-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
