drone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
spec:
  selector:
    app.kubernetes.io/name: drone
  ports:
    - name: http
      port: 80
      targetPort: http
