drone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone
spec:
  rules:
    - host: drone.example.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: drone
                port:
                  name: http
